# rustafits

./: .gitignore  BUILD_MACOS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  PERFORMANCE.md  PKGBUILD  README.md  build.rs  rustafits.spec  test_bayer.c  test_fits.c  test_pipeline.c  test_real_stretch.c  test_stats  test_stats.c  test_stretch.c
.github/workflows/: release.yml  update-aur.yml  update-homebrew.yml
Formula/: rustafits.rb
c_src/: base64.c  compat.h  fits_processor.c  fits_processor.h  fits_reader.c  fits_reader.h  jpeg_writer.c  xisf_reader.c  xisf_reader.h
debian/: changelog  control  copyright  rules
docs/: analysis-pipeline.md  annotation.md  athenaeum-integration.md  background.md  detection.md  fitting.md  metrics.md  rustafits-optimization-recommendations.md  snr.md  trail-rejection.md  usage.md
docs/plans/: 2026-03-08-analysis-pipeline-implementation.md  2026-03-08-analysis-pipeline-redesign.md  2026-03-09-multi-layer-mrs-noise.md
docs/superpowers/plans/: 2026-03-22-analysis-speed-robustness.md  2026-03-24-ecc-weighted-mean.md  2026-03-25-replace-ccl-with-proximity.md  2026-03-27-stage-timing-batch-api.md
docs/superpowers/specs/: 2026-03-22-analysis-speed-robustness-design.md  2026-03-27-stage-timing-batch-api-design.md
examples/: analyze_batch.rs  trail_test.rs
ffi/: Cargo.toml  debayer.c  debayer.h  fits_converter.h  stretch.c  stretch.h
ffi/src/: lib.rs
src/: annotate.rs  converter.rs  debayer.rs  downscale.rs  fits.rs  lib.rs  lib_c.rs  output.rs  pipeline.rs  processor.rs  stretch.rs  types.rs
src/analysis/: background.rs  convolution.rs  detection.rs  fitting.rs  metrics.rs  mod.rs  render.rs  snr.rs
src/formats/: fits.rs  mod.rs  xisf.rs
src/platesolving/: mod.rs  pattern_matcher.rs  projection.rs  proper_motion.rs  ransac.rs  transform.rs  types.rs  wcs.rs
src/processing/: binning.rs  color.rs  debayer.rs  downscale.rs  mod.rs  stretch.rs
tests/: analysis.rs
