[package]
name = "rustafits"
version = "0.1.0"
edition = "2021"
authors = ["Vilen Sharifov <vilen.sharifov@gmail.com>"]
description = "High-performance FITS to JPEG converter for astronomical images with auto-stretch and Bayer debayering"
license = "GPL-3.0"
repository = "https://github.com/eg013ra1n/rustafits"
homepage = "https://github.com/eg013ra1n/rustafits"
documentation = "https://github.com/eg013ra1n/rustafits#readme"
readme = "README.md"
keywords = ["astronomy", "fits", "image-processing", "converter", "astrophotography"]
categories = ["multimedia::images", "science", "command-line-utilities"]

[lib]
name = "fits_converter"
path = "src/lib.rs"

[[bin]]
name = "rustafits"
path = "src/bin/rustafits.rs"

[dependencies]
anyhow = "1.0"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
