[package]
name = "rustafits"
version = "0.4.5"
edition = "2021"
authors = ["Vilen Sharifov <vilen.sharifov@gmail.com>"]
description = "High-performance FITS to JPEG converter for astronomical images with auto-stretch and Bayer debayering"
license = "Apache-2.0"
repository = "https://github.com/eg013ra1n/rustafits"
homepage = "https://github.com/eg013ra1n/rustafits"
documentation = "https://github.com/eg013ra1n/rustafits#readme"
readme = "README.md"
keywords = ["astronomy", "fits", "image-processing", "converter", "astrophotography"]
categories = ["multimedia::images", "science", "command-line-utilities"]

[lib]
name = "astroimage"
path = "src/lib.rs"

[[bin]]
name = "rustafits"
path = "src/bin/rustafits.rs"

[dependencies]
anyhow = "1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode"] }
ruzstd = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
quick-xml = "0.37"
base64 = "0.22"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
